--- a/spring-boot-mybatis-interceptor/src/main/resources/application.properties
+++ b/spring-boot-mybatis-interceptor/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=123456
 # create-drop ：每次加载 hibernate 时根据 model 类生成表，但是 sessionFactory 一关闭，表就自动删除。[删除-创建-操作-再删除]
 # update：最常用的属性，第一次加载 hibernate 时根据 model 类会自动建立起表的结构（前提是先建立好数据库），以后加载 hibernate 时根据 model 类自动更新表结构，即使表结构改变了，但表中的行仍然存在，不会删除以前的行。要注意的是当部署到服务器后，表结构是不会被马上建立起来的，是要等应用第一次运行起来后才会。[没表-创建-操作 | 有表-更新没有的属性列-操作]
 # validate：每次加载 hibernate 时，验证创建数据库表结构，只会和数据库中的表进行比较，不会创建新表，但是会插入新值。[启动验证表结构，验证不成功，项目启动失败]
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
 # 让注解生效(表设别名,字段设置别名)
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -26,6 +26,6 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=300000
 spring.datasource.hikari.connection-test-query=SELECT 1
 #logging.level.root=debug
-mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.github.mybatis.common.pojo
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis.type-handlers-package=com.github.mybatis.convertor.config
+
+
